force-app/main/default/objects/Call_Recording__c.object
<CustomObject>
    <description>Stores metadata for recordings.</description>
    <label>Call Recording</label>
    <nameField>
        <displayFormat>CR-{0000000}</displayFormat>
        <label>Call Recording Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Recordings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Recording_URL__c</fullName>
        <label>Recording URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Recording_Length__c</fullName>
        <label>Recording Length (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <label>Storage Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voice_Call__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voice Call</label>
        <referenceTo>Voice_Call__c</referenceTo>
        <relationshipLabel>Call Recordings</relationshipLabel>
        <relationshipName>Call_Recordings</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>